# chatcmd

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 97d19f3d04ac_create_user_and_message_tables.py
chatcmd/: client.py  reader.py  server.py  store.py  utils.py  validators.py
chatcmd/db/: db_config.py  db_queries.py  models.py
tests/: database.py  factories.py  fixtures.py  test_client.py  test_db.py  test_models.py  test_validators.py
